[tool.poetry]
name = "homework 16"
version = "0.1.0"
description = "Homework 16 with Poetry"
authors = ["MBorja <chealsy25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.1"
selene = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
